--- a/app/css/app.css
+++ b/app/css/app.css
@@ -16,12 +16,12 @@ body {
    width: 100%;
 }
 
-/*.centralizarLogin {*/
-    /*max-width: 400px;*/
-    /*margin-left: auto;*/
-    /*margin-right: auto;*/
-    /*margin-top: 100px;*/
-/*}*/
+.centralizarLogin {
+    max-width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100px;
+}
 
 /*.juntarBotoesLogin {*/
     /*max-width: 200px;*/
