--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,6 +1,7 @@
 body {
     min-height: 2000px;
     padding-top: 70px;
+    background-image: url("../imagens/background/vol52_render.jpg");
 }
 
 .gamePlayBody {
@@ -17,10 +18,13 @@ body {
 }
 
 .centralizarLogin {
-    max-width: 400px;
+    max-width: 500px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 100px;
+    background-color: #FFFFFF;
+    padding: 80px 80px 80px 80px;
+    border-radius: 10px 10px 10px 10px;
 }
 
 /*.juntarBotoesLogin {*/
